--- a/ScreenScrapping.Console/App.config
+++ b/ScreenScrapping.Console/App.config
@@ -1,6 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+
+    <configSections>
+        <section name="ScrappingDefinition" type="ScreenScrapping.Console.ScrappingDefinition.ScrappingDefinitionSection, ScreenScrapping.Console"/>
+    </configSections>
+    
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+    </startup>        
+
+    <ScrappingDefinition configSource="ScrappingDefinition\ScrappingDefinitions.xml" />    
+    
 </configuration>
