--- a/ScreenScrapping.Engine/ScreenScrapping.Engine.csproj
+++ b/ScreenScrapping.Engine/ScreenScrapping.Engine.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dtos\ScrappedHtmlNode.cs" />
+    <Compile Include="Dtos\UniqueCollection.cs" />
+    <Compile Include="Dtos\UniqueUrlInfoCollection.cs" />
     <Compile Include="EngineManager.cs" />
     <Compile Include="Helpers\Extensions.cs" />
     <Compile Include="HtmlParsers\HtmlAgilityParser.cs" />
@@ -53,7 +56,7 @@
     <Compile Include="PagingStrategy\MultiPaging.cs" />
     <Compile Include="PagingStrategy\SimplePaging.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UniqueUrlCollection.cs" />
+    <Compile Include="Dtos\UniqueUrlCollection.cs" />
     <Compile Include="WebDownloader.cs" />
   </ItemGroup>
   <ItemGroup>
