added support for scrapping items limit

--- a/ScreenScrapping.Console/ScreenScrapping.Console.csproj
+++ b/ScreenScrapping.Console/ScreenScrapping.Console.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EngineRunner.cs" />
+    <Compile Include="Logging\ConsoleLogger.cs" />
+    <Compile Include="Logging\ILogger.cs" />
     <Compile Include="ScrappingDefinition\ScrappingDefinitionSection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
