--- a/ScreenScrapping.Console/ScreenScrapping.Console.csproj
+++ b/ScreenScrapping.Console/ScreenScrapping.Console.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="EngineRunner.cs" />
     <Compile Include="Logging\ConsoleLogger.cs" />
+    <Compile Include="Logging\FileLogger.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="ScrappingDefinition\ScrappingDefinitionSection.cs" />
     <Compile Include="Program.cs" />
@@ -63,6 +64,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
